Document level Plot save
Added class for holding document level data and began to link to create
foundation.

--- a/Structures/Structures.csproj
+++ b/Structures/Structures.csproj
@@ -61,6 +61,13 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JPPCore\JPPCore.csproj">
+      <Project>{265173E9-D3F3-4C37-9B29-071D4A7453B0}</Project>
+      <Name>JPPCore</Name>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
