--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -85,7 +85,9 @@
     <Compile Include="Authentication.cs" />
     <Compile Include="AuthToken.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DocumentStore.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Plot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
