--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -106,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Locked.png" />
+    <None Include="StructuralBlocks.dwg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\UnLocked.png" />
