Updated to latest 3rd party build
Updated to latest 3rd party build issued 22/05/17. Believe our
modifications have been preserved but need to test to confirm.

--- a/JPPCommands/JPPCommands.csproj
+++ b/JPPCommands/JPPCommands.csproj
@@ -31,13 +31,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AcCoreMgd">
-      <HintPath>C:\ObjectARX 2016\inc\AcCoreMgd.dll</HintPath>
+      <HintPath>C:\Autodesk\Autodesk_ObjectARX_2017_Win_64_and_32_Bit\inc\AcCoreMgd.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="AcDbMgd">
-      <HintPath>C:\ObjectARX 2016\inc\AcDbMgd.dll</HintPath>
+      <HintPath>C:\Autodesk\Autodesk_ObjectARX_2017_Win_64_and_32_Bit\inc\AcDbMgd.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="AcMgd">
-      <HintPath>C:\ObjectARX 2016\inc\AcMgd.dll</HintPath>
+      <HintPath>C:\Autodesk\Autodesk_ObjectARX_2017_Win_64_and_32_Bit\inc\AcMgd.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,6 +63,7 @@
     <Compile Include="JPPCommandsInitialisation.cs" />
     <Compile Include="JPPConstants.cs" />
     <Compile Include="JPPUtils.cs" />
+    <Compile Include="JPP_Utility_Commands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
