--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -124,6 +124,9 @@
   <ItemGroup>
     <None Include="Resources\importXref.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\housingscheme.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
