--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -79,6 +79,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HousingScheme\Plot.cs" />
+    <Compile Include="HousingScheme\WallSegment.cs" />
     <Compile Include="PolylineUtilities.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Pipe.cs" />
