--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,9 +78,17 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CivilDocumentStore.cs" />
+    <Compile Include="HousingScheme\FoundationControl.xaml.cs">
+      <DependentUpon>FoundationControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HousingScheme\Plot.cs" />
+    <Compile Include="HousingScheme\PlotUserControl.xaml.cs">
+      <DependentUpon>PlotUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HousingScheme\WallSegment.cs" />
     <Compile Include="PolylineUtilities.cs" />
     <Compile Include="Main.cs" />
@@ -128,6 +137,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\housingscheme.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="HousingScheme\FoundationControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="HousingScheme\PlotUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\delete.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
