--- a/Structures/CivilStructures.csproj
+++ b/Structures/CivilStructures.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JPP.CivilStructures</RootNamespace>
-    <AssemblyName>Structures</AssemblyName>
+    <AssemblyName>CivilStructures</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
