Plot Level made more flexible
Added a plot level class to manage level labels. Need to sort out the modification code as its buggy

--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -110,6 +110,7 @@
       <DependentUpon>FoundationControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="HousingScheme\Plot.cs" />
+    <Compile Include="HousingScheme\PlotLevel.cs" />
     <Compile Include="HousingScheme\PlotType.cs" />
     <Compile Include="HousingScheme\PlotTypeUserControl.xaml.cs">
       <DependentUpon>PlotTypeUserControl.xaml</DependentUpon>
