Improved tanking calculation
Fixed a couple of bugs and edge cases with the tanking. *Should* now work correctly for any points that are not level. Moved a paramter to a new constants file for easy cutomization

--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CivilDocumentStore.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="HousingScheme\FoundationControl.xaml.cs">
       <DependentUpon>FoundationControl.xaml</DependentUpon>
     </Compile>
