--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -151,6 +151,7 @@
     </None>
     <None Include="Resources\Locked.png" />
     <None Include="Resources\settings.png" />
+    <None Include="Resources\package.png" />
     <Content Include="StructuralBlocks.dwg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
