--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -115,8 +115,12 @@
     <Compile Include="AuthToken.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DocumentStore.cs" />
+    <Compile Include="DrawingLibraryNode.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="JPPMain.cs" />
+    <Compile Include="Library.cs" />
+    <Compile Include="LibraryLeaf.cs" />
+    <Compile Include="LibraryNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -164,6 +168,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Library\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
