--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -148,6 +148,11 @@
     </Compile>
     <Compile Include="HousingScheme\WallJoint.cs" />
     <Compile Include="HousingScheme\WallSegment.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Xref.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +167,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <Content Include="Templates.dwg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -174,6 +180,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Resources\pipe.png" />
   </ItemGroup>
   <ItemGroup>
