--- a/Civils/Civils.csproj
+++ b/Civils/Civils.csproj
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="HousingScheme\WallSegmentold.cs" />
     <Compile Include="Drainage\Node.cs" />
+    <Compile Include="HousingScheme\PlotStatusConverter.cs" />
     <Compile Include="PolylineUtilities.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Pipe.cs" />
@@ -169,6 +170,10 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Resources\approval.png" />
+    <None Include="Resources\checked.png" />
+    <None Include="Resources\error.png" />
+    <None Include="Resources\warning.png" />
     <Content Include="Templates.dwg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
