--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -113,9 +113,12 @@
   <ItemGroup>
     <Compile Include="Authentication.cs" />
     <Compile Include="AuthToken.cs" />
+    <Compile Include="ClickHandler\ClickOverride.cs" />
+    <Compile Include="ClickHandler\ClickOverrideEditorExtension.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DocumentStore.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="ClickHandler\IClickOverrideInstance.cs" />
     <Compile Include="JPPMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
