Setup and Basic Ring
Added the code outline, and the basic drawing of the tree rings. Need a way to add to the drawing

--- a/Structures/CivilStructures.csproj
+++ b/Structures/CivilStructures.csproj
@@ -87,9 +87,13 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CivilStructureDocumentStore.cs" />
+    <Compile Include="CSConstants.cs" />
     <Compile Include="Foundation.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="NHBCTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteFoundations.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Civils\Civils.csproj">
