--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -113,12 +113,15 @@
   <ItemGroup>
     <Compile Include="Authentication.cs" />
     <Compile Include="AuthToken.cs" />
+    <Compile Include="CircleObject.cs" />
     <Compile Include="ClickHandler\ClickOverride.cs" />
     <Compile Include="ClickHandler\ClickOverrideEditorExtension.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DocumentStore.cs" />
+    <Compile Include="DrawingObject.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="ClickHandler\IClickOverrideInstance.cs" />
+    <Compile Include="IDrawingObject.cs" />
     <Compile Include="JPPMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
