--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -123,6 +123,7 @@
     <Compile Include="ClickHandler\IClickOverrideInstance.cs" />
     <Compile Include="IDrawingObject.cs" />
     <Compile Include="JPPMain.cs" />
+    <Compile Include="PersistentObjectIdCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
