Began to extract UI to ResourceDictionary
Moved UI style code to easily apply a consistant style app wide. Removed extra style now superseeded

--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -168,6 +168,10 @@
     <None Include="Resources\UnLocked.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="AutocadStyleResourceDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Resource>
     <Page Include="SettingsUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
