--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Compile Include="Authentication.cs" />
     <Compile Include="AuthToken.cs" />
+    <Compile Include="Branch.cs" />
     <Compile Include="CircleObject.cs" />
     <Compile Include="ClickHandler\ClickOverride.cs" />
     <Compile Include="ClickHandler\ClickOverrideEditorExtension.cs" />
@@ -123,6 +124,8 @@
     <Compile Include="ClickHandler\IClickOverrideInstance.cs" />
     <Compile Include="IDrawingObject.cs" />
     <Compile Include="JPPMain.cs" />
+    <Compile Include="Leaf.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="PersistentObjectIdCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
