--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -127,6 +127,7 @@
     <Compile Include="JPPMain.cs" />
     <Compile Include="Leaf.cs" />
     <Compile Include="Library.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="PersistentObjectIdCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
