--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -113,20 +113,20 @@
   <ItemGroup>
     <Compile Include="Authentication.cs" />
     <Compile Include="AuthToken.cs" />
-    <Compile Include="Branch.cs" />
-    <Compile Include="CircleObject.cs" />
+    <Compile Include="LibrarySystem\Branch.cs" />
+    <Compile Include="AutocadHelpers\CircleObject.cs" />
     <Compile Include="ClickHandler\ClickOverride.cs" />
     <Compile Include="ClickHandler\ClickOverrideEditorExtension.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DocumentStore.cs" />
-    <Compile Include="DrawingObject.cs" />
-    <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="AutocadHelpers\DrawingObject.cs" />
+    <Compile Include="AutocadHelpers\ExtensionMethods.cs" />
     <Compile Include="ClickHandler\IClickOverrideInstance.cs" />
-    <Compile Include="IDrawingObject.cs" />
-    <Compile Include="ILibraryItem.cs" />
+    <Compile Include="AutocadHelpers\IDrawingObject.cs" />
+    <Compile Include="LibrarySystem\ILibraryItem.cs" />
     <Compile Include="JPPMain.cs" />
-    <Compile Include="Leaf.cs" />
-    <Compile Include="Library.cs" />
+    <Compile Include="LibrarySystem\Leaf.cs" />
+    <Compile Include="LibrarySystem\Library.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PersistentObjectIdCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -146,7 +146,7 @@
     <Compile Include="SettingsUserControl.xaml.cs">
       <DependentUpon>SettingsUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UIPanelToggle.cs" />
+    <Compile Include="AutocadHelpers\UIPanelToggle.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -173,11 +173,11 @@
     <None Include="Resources\UnLocked.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="AutocadStyleResourceDictionary.xaml">
+    <Resource Include="AutocadHelpers\AutocadStyleResourceDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Resource>
-    <Resource Include="AutocadWindowStyleResourceDictionary.xaml">
+    <Resource Include="AutocadHelpers\AutocadWindowStyleResourceDictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Resource>
