--- a/Civils-Tests/packages.config
+++ b/Civils-Tests/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Reflection" version="1.1.0.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="Pose" version="1.2.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
 </packages>
