--- a/Civils/app.config
+++ b/Civils/app.config
@@ -10,6 +10,15 @@
             <setting name="P_Hatch_Offset" serializeAs="String">
                 <value>0.2</value>
             </setting>
+            <setting name="Plot_Drained_Area_Layer" serializeAs="String">
+                <value>JPP_Plot_Drained_Areas</value>
+            </setting>
+            <setting name="Plot_Drained_Area_Color" serializeAs="String">
+                <value>256</value>
+            </setting>
+            <setting name="Plot_Drained_Area_Pattern" serializeAs="String">
+                <value>ANSI31</value>
+            </setting>
         </JPP.Civils.Properties.Settings>
     </userSettings>
 </configuration>
